--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=C:\\Users\\360\\AppData\\Local\\Android\\Sdk
 flutter.sdk=C:\\flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=3.0.0
 flutter.versionCode=1
